<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/dashboardFragment"
        android:icon="@drawable/dashboard"
        android:title="@string/nav_dashboard" />
    <item
        android:id="@+id/transactionsFragment"
        android:icon="@drawable/transactions"
        android:title="@string/nav_transactions" />
    <item
        android:id="@+id/analyticsFragment"
        android:icon="@drawable/analytics"
        android:title="@string/nav_analytics" />
    <item
        android:id="@+id/budgetFragment"
        android:icon="@drawable/budget"
        android:title="@string/nav_budget" />
    <item
        android:id="@+id/settingsFragment"
        android:icon="@drawable/settings"
        android:title="@string/nav_settings" />
</menu>