<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_search"
        android:title="@string/action_search"
        android:icon="@drawable/search_transaction"
        app:showAsAction="ifRoom|collapseActionView"
        app:actionViewClass="androidx.appcompat.widget.SearchView" />
    <item
        android:id="@+id/action_filter"
        android:title="@string/action_filter"
        android:icon="@drawable/filter_transaction"
        app:showAsAction="ifRoom|withText" />
    <item
        android:id="@+id/action_sort"
        android:icon="@drawable/sort_transaction"
        android:title="@string/action_sort"
        app:showAsAction="ifRoom|withText" />
</menu>